--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.13.8",
     "react-window": "^1.8.9",
+    "svix": "^1.18.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "uploadthing": "^6.4.0",
